<?xml version="1.0"?>
<package format="3">
  <name>robot_llm_orchestrator</name>
  <version>0.1.0</version>
  <description>Launch orchestrator for robot planner and LLM nodes.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_planner</exec_depend>
  <exec_depend>ros2_rknn_llm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
